fixed layout breaking
fixed layout breaking at 540 x 720 pixels

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer p {
 
 /* -------  Media Query ------- */
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 650px) {
   header {
     display: flex;
     flex-direction: column;
